<resources>
    <string name="app_name">Agenda Pública</string>

    <!-- Strings related to botton navegation -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Buscar</string>
    <string name="title_medic">Médicos</string>
    <string name="title_profile">Perfil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="home_looking_label">What are you looking for?</string>
    <string name="home_location_label">Enter a location</string>
    <string name="home_when_label">Enter a date</string>
    <string name="home_who_label">Do you have insurance?</string>
    <string name="home_find_button">Find</string>


</resources>
